# fmm

./: CITATION.cff  LICENSE  README.md  pyproject.toml
benchmarks/: README.md  corpus.py  plot_results.py  plot_router_results.py  run.sh  run_benchmark.py  run_router.sh  run_router_benchmark.py
benchmarks/results/: .gitignore  router_runs.jsonl  router_summary.json  runs.jsonl  summary.json
src/fmm/: __init__.py  matrix.py  tree.py
